# models/dialoGPT/dto/request_dto.go
@@ -1,0 +1,5 @@
+package dto
+
+type RequestDto struct {
+	Inputs string `json:"inputs"`
+}
